Silenced a couple of lint warnings